<resources>
    <string name="app_name">iFit</string>
    <string name="comenzar">¡Quiero registrarme!</string>
    <string name="comenzar_ejercicio">¡Comenzar!</string>
    <string name="salir">Cerrar sesión</string>
    <string name="cerrar_app">Salir</string>
    <string name="ayuda">Ayuda</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="acceso_dep">Soy deportista</string>
    <string name="titulo_dep">Acceso deportistas</string>
    <string name="acceso_ent">Soy entrenador</string>
    <string name="titulo_ent">Acceso entrenadores</string>

    <string name="acceso_seguir">Entrar</string>
    <string name="nuevo_ejercicio">Nuevo Ejercicio</string>
    <string name="acceso_volver">volver</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="codigo">Código de entrenador</string>
    <string name="fecha">F. registro</string>
    <string name="estatura_perfil">Estatura</string>
    <string name="peso_perfil">Peso</string>
    <string name="cantidad_deportistas">Nº deportistas</string>
    <string name="especialidad_perfil">Especialidad</string>
    <string name="editar_deportista">Editar deportistas</string>
    <string name="borrar_perfil">Eliminar mi cuenta</string>
    <string name="nuevo">Nuevo</string>
    <string name="instrucciones_entrenador">(Pulsa en el nombre para entrenar)</string>

    <string name="registro_deportista">Nuevo deportista</string>
    <string name="registro_entrenador">Nuevo entrenador</string>
    <string name="registro_titulo">Nuevo usuario</string>
    <string name="repetir_contraseña">Repetir contraseña</string>
    <string name="registro_peso">Peso (ej: 53.5)</string>
    <string name="estatura">Estatura (ej: 1.75)</string>
    <string name="edad">Edad</string>
    <string name="especialidad">Especialidad deportiva</string>
    <string name="centro">Centro</string>
    <string name="acepto">Acepto que se almacenen mis datos</string>
    <string name="registro_aceptar">Registrarme</string>
    <string name="miembro_desde">Miembro desde:</string>
    <string name="id_entrenador">Id del entrenador</string>

    <string name="volver">Volver al inicio</string>
    <string name="abdomninales">Abdominales</string>
    <string name="flexiones">Flexiones</string>
    <string name="burpees">Burpees</string>
    <string name="gluteos">Patada Gluteos</string>
    <string name="triceps">Triceps</string>
    <string name="abductor">Abductores</string>
    <string name="puente">Puente Gluteos</string>
    <string name="peso">Peso Muerto</string>
    <string name="sentadillas">Sentadillas</string>
    <string name="steps">Step Ups</string>
    <string name="zancadas">Zancadas</string>
    <string name="zancadas_laterales">Zancadas Laterales</string>
    <string name="repeticiones">0</string>
    <string name="resultado">resultado</string>
    <string name="tiempo">Segundos (media)</string>
    <string name="time">Tiempo</string>
    <string name="tipo">Ejercicio</string>
    <string name="anteriores">Historial de puntaciones anteriores</string>


    <string name="terminar">Terminar</string>
    <string name="pausar">Pausa</string>
    <string name="renaudar">Renaudar</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="otro">Otro ejercicio</string>

    <string name="consejo_abdominales">Respira adecuadamente: inspira antes de contraer el abdomen y espira al subir.\n\nNunca tires del cuello. Si lo notas excesivamente tenso, sujeta la cabeza con ambas manos.\n\nMantén los codos separados y alejados del cuerpo durante todo el ejercicio</string>
    <string name="consejo_abductores">Túmbate de lado, forma una línea recta con tu cuerpo. \n\nAsegúrate de que las caderas están alineadas. \n\nColoca la mano de arriba delante de ti para evitar inclinarte hacia adelante. \n\nFíjate en que el talón y los dedos del pie estén alineados durante el ejercicio</string>
    <string name="consejo_burpees">Inspira antes de hacer la bajada de plancha. Espira una vez llegues al suelo.\n\nTensa el abdomnen durante todo el ejercicio para no sobrecargar la lumbar.\n\nMantén la columna alineada para evitar lesiones, si esto te resulta difícil al principio, puedes apoyar las rodillas</string>
    <string name="consejo_flexiones">Las manos deben formar un triángulo con la cabeza, pero no deben estar justo debajo de los hombros.\n\nMantén la columna alineada para evitar lesiones, si esto te resulta difícil al principio, puedes apoyar las rodillas</string>
    <string name="consejo_gluteos">Lleva la pierta hacia atrás todo lo que puedas.\n\nNo dobles la espalda, si esto te resulta difícil, busca algo para apoyarte.</string>
    <string name="consejo_triceps">Flexiona los brazos sin separar los codos del cuerpo.\n\nIntenta no apoyarte hasta acabar para conseguir mejores resultados.</string>
    <string name="consejo_peso">Haz calentamiento antes de empezar.\n\nMantén la espalda recta en todo momento.\n\nSe razonable al elegir el peso a levantar; es mejor incrementar poco a poco.</string>
    <string name="consejo_puente">Túmbate boca arriba con la espalda completamente apoyada. Dobla las rodillas y coloca los pies a la altura de la cadera.\n\nEspalda glúteos y muslos deben formar una línea recta. \n\nLas rodillas no deben tocarse.</string>
    <string name="consejo_sentadillas">Coloca los pies a la altura de los hombros, ligeramente hacia afuera.\n\n Mantén la cabeza recta y la vista fija.\n\n No dejes que las rodillas avancen por delante de los pies.</string>
    <string name="consejo_steps">Presta atención a tu postura, para asegurarte de usar todo el cuerpo al moverte y no sobrecargar. Podrías ayudarte de un espejo.\n\nMantén los hombros hacia atrás y el cuerpo alineado.\n\nMantén las rodillas semiflexionadas.</string>
    <string name="consejo_zancadas">Mantén el torso recto. Evita los balanceos e inclinarte hacia adelante.\n\nLa rodilla debe doblarse unos 90º.\n\nRepite la misma cantidad de zancadas en cada lado para no ejercitar de forma desigual.</string>
    <string name="consejo_zancadas_laterales">Contrae el abdomen.\n\nPuedes inclinarte un poco, pero siempre con la espalda recta.\n\nEvita cualquier movimiento de rotación durante el ejercicio</string>


    <string name="impresionante">¡¡IM-PRE-SIO-NANTE!!</string>
    <string name="texto_impresionante">Has tardado una media de %1$s segundos.\nEs evidente que este ejercicio no supone ninguna dificultad para tí.\n\nIntenta incrementar el número de repeticiones.</string>
    <string name="fenomenal">Simplemente fenomenal</string>
    <string name="texto_fenomenal">Has tardado una media de %1$s segundos.\n¡Felicidades! Este ejercicio se te da muy bien. Intenta poco a poco subir el número de repeticiones, y descansa entre series para no lesionarte.</string>
    <string name="bien">¡Nada Mal!</string>
    <string name="texto_bien">Has tardado una media de %1$s segundos.\n\nTodavía hay margen para mejorar, pero lo importante es conseguirlo poco a poco.</string>
    <string name="conseguiste">¡Lo conseguiste!</string>
    <string name="texto_conseguiste">Has tardado una media de %1$s segundos.\nNo ha sido fácil, pero ¡lo has logrado!\n\nSi sigues así en poco tiempo verás buenos resultados.</string>
    <string name="mal">Todos tenemos un mal día</string>
    <string name="texto_mal">Has tardado una media de %1$s segundos.\nLo importante no es destacar siempre, sino nunca dejar de intentarlo. El éxito pertenece a los que no se rinden.</string>
    <string name="sin_cargar">Sin cargar</string>
    <string name="texto_sin_cargar">Sin cargar</string>
    <string name="title_activity_acceso_deportistas">AccesoDeportistas</string>

    <string name="perfiles">Perfiles de deportistas</string>
    <string name="seleccionar_perfil">Seleccionar deportista</string>

    <string name="datos_entrenado">Datos del entrenado</string>
    <string name="objetivo">Objetivo</string>
    <string name="eliminar">Eliminar Perfil</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Editar</string>

    <string name="nuevo_entrenado">Nuevo entrenado</string>
    <string name="editar_entrenado">Editar entrenado</string>
    <string name="nombreEntrenado">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="editar_perfil">Editar mis datos</string>
    <string name="aplicar">Aplicar</string>

    <string name="first_fragment_label">Primer fragmento</string>
    <string name="second_fragment_label">Segundo fragmento</string>


</resources>