<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/action_menu_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orderInCategory="99"
            android:title="@string/volver" />

        <item
            android:id="@+id/action_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orderInCategory="99"
            android:title="@string/ayuda"/>

        <item
            android:id="@+id/action_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orderInCategory="99"
            android:title="@string/mi_perfil"/>


</menu>